[package]
name = "ruskey"
version = "0.0.1"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD"
description = """
Daemon to bridge between SecretStorage and keepass databases.
"""

[dependencies]
clap = "1.1.6"
config = "0.1.1"
# TODO: use dbus-bytestream
dbus = "0.1.1"
xdg-basedir = "0.2.1"

[[bin]]
name = "ruskey"
