[package]
name = "ruskey"
version = "0.0.1"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD"
description = """
Daemon to bridge between SecretStorage and keepass databases.
"""

[dependencies]
clap = "1.1.6"
config = "0.1.1"
# TODO: use dbus-bytestream
dbus = "0.1.1"
xdg-basedir = "0.2.1"

[dependencies.wm-daemons]
git = "https://github.com/mathstuf/wm-daemons.git"

#[dependencies.keepass]
#git = "https://github.com/raymontag/rust-keepass.git"

[[bin]]
name = "ruskey"
